tests/compile_fail/ktstr_test_duration_s_zero.stderr
error: duration_s must be > 0 (a zero-duration run never exercises the scheduler and produces no data for assertions)
 --> tests/compile_fail/ktstr_test_duration_s_zero.rs:6:1
  |
6 | #[ktstr_test(duration_s = 0)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `anyhow::Result`
 --> tests/compile_fail/ktstr_test_duration_s_zero.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ktstr::assert::AssertResult`
 --> tests/compile_fail/ktstr_test_duration_s_zero.rs:2:5
  |
2 | use ktstr::assert::AssertResult;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ktstr::scenario::Ctx`
 --> tests/compile_fail/ktstr_test_duration_s_zero.rs:4:5
  |
4 | use ktstr::scenario::Ctx;
  |     ^^^^^^^^^^^^^^^^^^^^
